--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="holder">  
             <div class="form">
-                <form action="<?php echo $_SERVER['PHP_SELF'] ?>" method="POST">
+                <form action="index.php" method="POST">
                     <div class="first">
                         <input type="text" class="input" placeholder="Type Your Name" name="name" required>
                         <input type="text" class="input" placeholder="Type Your Phone Number" name="phone" required>
